add related library

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "elodarrofirst",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "elodarroin": "^1.0.0"
+  }
 }
